--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -38,7 +38,7 @@
 
 .f1 {
     position: absolute;
-    bottom: 8%;
+    bottom: 15%;
     left: 5%;
     color: white;
     font-size: 0.8rem;
@@ -46,7 +46,7 @@
 
 .f2 {
     position: absolute;
-    bottom: 5%;
+    bottom: 10%;
     left: 5%;
     color: white;
     font-size: 0.8rem;
@@ -54,7 +54,14 @@
 
 .f3 {
     position: absolute;
-    bottom: 2%;
+    bottom: 5%;
+    left: 5%;
+    color: white;
+    font-size: 0.8rem;
+}
+.f4 {
+    position: absolute;
+    bottom: 0%;
     left: 5%;
     color: white;
     font-size: 0.8rem;
