--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -59,9 +59,18 @@
     color: white;
     font-size: 0.8rem;
 }
+
 .f4 {
     position: absolute;
     bottom: 0%;
+    left: 5%;
+    color: white;
+    font-size: 0.8rem;
+}
+
+.f5 {
+    position: absolute;
+    bottom: 20%;
     left: 5%;
     color: white;
     font-size: 0.8rem;
@@ -72,7 +81,7 @@
         font-size: 0.9em;
     }
 
-    .card i{
+    .card i {
         font-size: 0.7em;
     }
 }
@@ -82,7 +91,7 @@
         font-size: 0.6em;
     }
 
-    .card i{
+    .card i {
         font-size: 0.6em;
     }
 
